<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/reg_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/add_note" />

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/create_note_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="215dp"
        android:layout_marginTop="215dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/add_note_image_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/select_image"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight=".01"
            android:text="@string/add_page"
            android:textColor="#FF000F5F" />

        <ImageView
            android:id="@+id/add_note_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" />

        <Button
            android:id="@+id/add_another"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight=".01"
            android:text="@string/save_page"
            android:textColor="#FF000F5F" />

        <Button
            android:id="@+id/finish"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight=".01"
            android:text="@string/finish"
            android:textColor="#FF000F5F" />

    </LinearLayout>


</LinearLayout>
